--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,159 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: mayankCustom;
+    src: url(BebasNeue-Regular.otf);   
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: #0a0c0d;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+    background: 'rgb(22,213,0)';
+    background: linear-gradient(
+        90deg,
+         rgba(22,213,0,1) 16%,
+         rgba(0,108,236,1) 81%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-align: center;
+    letter-spacing: 1px;
+    padding: 40px 20px;
+    font-family: mayankCustom;
+    font-size: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Main-search{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search{
+    background-color: #191717; /* Grayish background */
+    width: 40%;
+    padding: 10px; 
+    border-radius: 50px; 
+    box-shadow: 2px 2px 5px rgba(40, 40, 40, 0.2); /* Subtle shadow */
+    display: flex;
+    align-items: center;
+}
+.search input {
+    flex: 1; /* Expand to fill available space */
+    border: none; /* Remove the default border */
+    background-color: transparent; 
+    color: white; /* White text color */
+    padding: 8px; /* Add padding */
+    outline: none; /* Remove the input focus outline */
+}
+
+.search img{
+    background-color: #191717;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    padding-right: 10px;
+}
+
+.container {
+    gap: 35px;
+    width: 100%;
+    margin-top: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    color: aliceblue;
+}
+
+.movie{
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.movie img{
+    width: 250px;
+    height: 370px;
+    border-radius: 20px;
+    transition: transform 0.3s ease;
+}
+
+.cardWrapper{
+    position: absolute;
+    top: 0;
+    left: 100%; 
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.7); 
+    color: white;
+    padding: 10px;
+    transition: transform 0.3s ease;
+    border-radius: 20px;
+}
+
+.smallCard{
+    height: -30%;
+    background-color: rgb(82, 79, 79, 0.7);
+    border-radius: 20px;
+    width: 100%;
+
+}
+
+.cardWrapper p{
+    background-color: transparent; 
+    font-size: 15px;
+    text-transform: capitalize;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.movie:hover img{
+    transform: scale(1.1);
+}
+
+.movie:hover .cardWrapper {
+    transform: translateX(-100%); /* Slide .cardWrapper in from the right on hover */
   }
+
+#year{
+    position: absolute;
+    top: 5px; 
+    left: 5px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding-left: 15px;
+    padding-top: 10px;
+    font-size: 20px;
+    color: rgb(239, 205, 164);
+    
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#type{
+    text-align: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    padding: 8px 8px;
+    font-size: 17px;
+    font-family: 5px;
+    font-weight: bold;
+    color: rgb(239, 205, 164);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#title{
+    text-align: left;
+    font-family: mayankCustom;
+    padding-left: 15px;
+    padding-bottom: 5px;
+    font-size: 20px;
+    background: linear-gradient(
+        90deg,
+         rgba(22,213,0,1) 16%,
+         rgba(0,108,236,1) 81%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
 }
